# uqlm

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  documentation.yaml  linting.yml  publish.yml
assets/: README_PYPI.md
docs/source/: api.rst  conf.py  contribute.rst  getstarted.rst  index.rst
docs/source/_notebooks/: index.rst
docs/source/scorer_definitions/: index.rst
examples/: README.md  black_box_demo.ipynb  ensemble_tuning_demo.ipynb  langgraph_demo.ipynb  long_text_graph_demo.ipynb  long_text_qa_demo.ipynb  long_text_uq_demo.ipynb  white_box_multi_generation_demo.ipynb  white_box_single_generation_demo.ipynb
latest/: .buildinfo  genindex.html  getstarted.html  index.html  objects.inv  searchindex.js
latest/_autosummary/: uqlm.black_box.bert.html  uqlm.black_box.consistency.ConsistencyScorer.html  uqlm.black_box.consistency.html  uqlm.black_box.match.html  uqlm.judges.judge.html  uqlm.nli.cluster.SemanticClusterer.html  uqlm.nli.cluster.html  uqlm.nli.html  uqlm.nli.nli.NLI.html  uqlm.scorers.baseclass.uncertainty.UncertaintyQuantifier.html  uqlm.scorers.baseclass.uncertainty.html  uqlm.scorers.ensemble.html  uqlm.scorers.entropy.html  uqlm.scorers.panel.LLMPanel.html  uqlm.scorers.white_box.WhiteBoxUQ.html  uqlm.scorers.white_box.html  uqlm.utils.dataloader.html  uqlm.utils.dataloader.list_dataset_names.html  uqlm.utils.device.html  uqlm.utils.display.ConditionalSpinnerColumn.html  uqlm.utils.display.html  uqlm.utils.grader.LLMGrader.html  uqlm.utils.html  uqlm.utils.llm_config.html  uqlm.utils.llm_config.load_llm_config.html  uqlm.utils.plots.html  uqlm.utils.plots.plot_ranked_auc.html  uqlm.utils.postprocessors.html  uqlm.utils.postprocessors.math_postprocessor.html  uqlm.utils.prompts.create_example.html  uqlm.utils.prompts.create_instruction.html  uqlm.utils.prompts.html  uqlm.utils.response_generator.html  uqlm.utils.results.UQResult.html  uqlm.utils.tuner.Tuner.html  uqlm.utils.warn.UQLMBetaWarning.html  uqlm.utils.warn.beta_warning.html  uqlm.utils.warn.deprecation_warning.html  uqlm.white_box.baseclass.html  uqlm.white_box.baseclass.logprobs_scorer.LogprobsScorer.html  (+5 more)
latest/_notebooks/examples/: black_box_demo.ipynb  ensemble_off_the_shelf_demo.html  ensemble_tuning_demo.html  multimodal_demo.html  multimodal_demo.ipynb  semantic_density_demo.html  white_box_multi_generation_demo.ipynb  white_box_single_generation_demo.html
latest/_sources/: api.rst.txt
latest/_sources/_autosummary/: uqlm.black_box.consistency.ConsistencyScorer.rst.txt  uqlm.black_box.consistency.rst.txt  uqlm.black_box.rst.txt  uqlm.judges.judge.LLMJudge.rst.txt  uqlm.judges.judge.rst.txt  uqlm.nli.cluster.SemanticClusterer.rst.txt  uqlm.nli.nli.rst.txt  uqlm.scorers.baseclass.rst.txt  uqlm.scorers.density.SemanticDensity.rst.txt  uqlm.scorers.density.rst.txt  uqlm.scorers.rst.txt  uqlm.scorers.white_box.WhiteBoxUQ.rst.txt  uqlm.utils.device.rst.txt  uqlm.utils.grader.LLMGrader.rst.txt  uqlm.utils.plots.rst.txt  uqlm.utils.prompts.create_example.rst.txt  uqlm.utils.prompts.create_instruction.rst.txt  uqlm.utils.response_generator.ResponseGenerator.rst.txt  uqlm.utils.warn.UQLMBetaWarning.rst.txt  uqlm.utils.warn.deprecation_warning.rst.txt  uqlm.white_box.baseclass.logprobs_scorer.rst.txt  uqlm.white_box.p_true.PTrueScorer.rst.txt  uqlm.white_box.single_logprobs.SingleLogprobsScorer.rst.txt  uqlm.white_box.single_logprobs.rst.txt  uqlm.white_box.top_logprobs.rst.txt
latest/_sources/scorer_definitions/: index.rst.txt
latest/scorer_definitions/black_box/: bert_score.html  cosine_sim.html  (+3 more)
tests/: test_blackboxuq.py  test_claim_scores.py  test_decomposer.py  test_ensemble.py  test_entailment_classifier.py  test_factscore_grader.py  test_graphuq.py  test_llmjudge.py  test_llmpanel.py  test_longformuq_parent.py  test_longtextqa.py  test_longtextuq.py  test_luq.py  test_luq_matched.py  test_p_true.py  test_question_generator.py  test_responsegenerator.py  test_sampled_logprobs.py  test_semanticdensity.py  test_semanticentropy.py  test_uad.py  test_uncertainty.py  test_whiteboxuq.py
uqlm/: __init__.py
uqlm/black_box/: cosine.py
uqlm/longform/: __init__.py
uqlm/nli/: __init__.py  entailment.py
uqlm/scorers/: __init__.py
uqlm/utils/: __init__.py  display.py  grader.py  postprocessors.py  response_generator.py  results.py
uqlm/white_box/: sampled_logprobs.py  single_logprobs.py
v0.2/: api.html  contribute.html  faqs.html  py-modindex.html  search.html
v0.2/_autosummary/: uqlm.black_box.bert.BertScorer.html  uqlm.black_box.cosine.CosineScorer.html  uqlm.black_box.cosine.html  uqlm.black_box.html  uqlm.black_box.match.MatchScorer.html  uqlm.calibration.evaluate.evaluate_calibration.html  uqlm.calibration.evaluate.html  uqlm.calibration.html  uqlm.calibration.score_calibrator.ScoreCalibrator.html  uqlm.calibration.score_calibrator.html  uqlm.judges.html  uqlm.judges.judge.LLMJudge.html  uqlm.nli.nli.html  uqlm.resources.html  uqlm.scorers.baseclass.html  uqlm.scorers.black_box.BlackBoxUQ.html  uqlm.scorers.black_box.html  uqlm.scorers.density.SemanticDensity.html  uqlm.scorers.density.html  uqlm.scorers.ensemble.UQEnsemble.html  uqlm.scorers.entropy.SemanticEntropy.html  uqlm.scorers.html  uqlm.scorers.panel.html  uqlm.utils.dataloader.load_example_dataset.html  uqlm.utils.device.get_best_device.html  uqlm.utils.display.ConditionalBarColumn.html  uqlm.utils.display.ConditionalTextColumn.html  uqlm.utils.display.ConditionalTimeElapsedColumn.html  uqlm.utils.grader.html  uqlm.utils.llm_config.save_llm_config.html  uqlm.utils.plots.plot_filtered_accuracy.html  uqlm.utils.plots.plot_model_accuracies.html  uqlm.utils.response_generator.ResponseGenerator.html  uqlm.utils.results.html  uqlm.utils.tuner.html  uqlm.utils.warn.UQLMDeprecationWarning.html  uqlm.utils.warn.html  uqlm.white_box.p_true.html  uqlm.white_box.sampled_logprobs.SampledLogprobsScorer.html  uqlm.white_box.single_logprobs.SingleLogprobsScorer.html  (+2 more)
v0.2/_notebooks/: index.html
v0.2/_sources/: getstarted.rst.txt  index.rst.txt
v0.2/scorer_definitions/: index.html
(+164 files in other folders)
