[tool.poetry]
name = "uqlm"
version = "0.5.4"
description = "UQLM (Uncertainty Quantification for Language Models) is a Python package for UQ-based LLM hallucination detection."
authors = ["Dylan Bouchard <dylan.bouchard@cvshealth.com>", "Mohit Singh Chauhan <mohitsingh.chauhan@cvshealth.com>"]
maintainers = [
    "Dylan Bouchard <dbouchard92@gmail.com>", 
    "Mohit Singh Chauhan <mohitcek@gmail.com>",
    "David Skarbrevik <skarbrevik@gmail.com>",
    "Ho-Kyeong Ra <doyajii1@gmail.com>",
    "Viren Bajaj <virenbajaj4@gmail.com>",
    "Zeya Ahmad <zeyahmd@gmail.com>"
]
repository = "https://github.com/cvs-health/uqlm"
homepage = "https://github.com/cvs-health/uqlm"
documentation = "https://cvs-health.github.io/uqlm/latest/index.html"
license = "Apache-2.0"
readme = "assets/README_PYPI.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "uqlm" },
    { include = "uqlm/scorers" },
    { include = "uqlm/judges" },
    { include = "uqlm/black_box" },
    { include = "uqlm/white_box" },
    { include = "uqlm/longform" },
    { include = "uqlm/calibration" },
    { include = "uqlm/resources" },
    { include = "uqlm/utils" },
]
exclude = ["docs", "docs_src"] # never include documentation in build
keywords = ["LLM", "large language model", "LLM evaluation", "hallucination", "uncertainty quantification"]  # Add your keywords here

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
langchain = ">=0.3.7"
langchain-model-profiles = "^0.0.3"
transformers = "^4.45.2"
scikit-learn = [
    { version = "^1.5.2", markers = "python_version < '3.13'" },
    { version = "^1.7.0", markers = "python_version >= '3.13'" }
]
numpy = [
    { version = "^1.26.4", markers = "python_version < '3.13'" },
    { version = ">=2.3.1", markers = "python_version >= '3.13'" }
]
scipy = {version = "^1.15.0", markers = "python_version >= '3.13'"}
matplotlib = "^3.10.0"
optuna = "^4.0.0"
bert-score = "^0.3.0"
pandas = "^2.3.0"
sentence-transformers = ">=3.4,<6.0"
datasets = ">=3.3.2,<5.0.0"
rich = "^13.8.0"
ipywidgets = "^8.1.7"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.2.0"
ruff = "0.9.7"
pre-commit = "^4.1.0"
ipykernel = "^6.29.5"
langchain-openai = ">=0.2.6"
langchain-google-vertexai = ">=2.0.8"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx= "7.4.7"
pydata_sphinx_theme = "0.16.1"
sphinxcontrib-bibtex = "2.6.3"
sphinx-autodoc-typehints = "2.3.0"
sphinx-gallery = "0.18.0"
sphinx-favicon = "1.0.1"
nbsphinx = "0.9.6"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
ipykernel = "^6.29.5"
langchain-openai = ">=0.2.6"
pytest = "^8.3.5"
langchain-google-vertexai = ">=2.0.8"
pytest-asyncio = ">=0.25.3,<1.2.0"
pytest-cov = ">=6,<8"
pytest-rerunfailures = "^16.0"



[tool.pytest.ini_options]
testpaths = ["tests"]
reruns = 3
reruns_delay = 2.0
markers = [
    "asyncio"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# Core settings
line-length = 400

[tool.ruff.lint]
#What rules to enable
select = ["E", "F"]
# E = pycodestyle errors
# F = pyflakes
# I = isort (import sorting)
# B = bugbear (best practices)
# UP = pyupgrade (modernization)
# D = pydocstyle (docstring rules)
# S = bandit (security)

#What rules to ignore
ignore = []


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"uqlm/utils/prompts/*.py" = ["ALL"]